[build-system]
requires = ["setuptools>=61", "wheel", "Cython"]
build-backend = "setuptools.build_meta"



[project]
name = "omicverse"
version = "2.1.2rc1"
description = "OmicVerse: A single pipeline for exploring the entire transcriptome universe"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "Zehua Zeng", email = "starlitnightly@gmail.com"},
]
keywords = ["bioinformatics", "deep-learning", "scRNA-seq", "RNA-seq"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
dependencies = [
    
    'numpy>=1.23',
    'scanpy>=1.9',
    'pandas>=1.5, <3.0.0',
    'matplotlib>3.6',
    'scikit-learn>=1.2',
    'scipy>=1.8',
    'networkx>=2.8',
    'multiprocess>=0.70',
    'seaborn>=0.11',
    'datetime>=4.5',
    'statsmodels>=0.13',
    #'gseapy==0.10.8',
    'ipywidgets>=8.0',
    #'lifelines>=0.27',
    #'ktplotspy>=0.1',
    #'python-dotplot>=0.0.1',
    #'pybedtools>=0.8.1',
    #'boltons>=23.0',
    #'ctxcore>=0.2',
    #'termcolor>=2.1',
    
    
    #'gdown>=4.6',
    'igraph>=0.10',
    #'leidenalg>=0.9',
    
    
    #'phate>=1.0',
    'tqdm>=4.64',
    #'pydeseq2>=0.4.1',
    
    'adjustText>=0.8',
    'scikit-misc>=0.1',
    #'metatime>=1.3.0',
    
    #'tensorboard>=2.6',
    'scikit-image>=0.21',
    #'scrublet>=0.2',
    #'scvi-tools>=0.20.1',
    #'pynvml',
    'plotly',
    'numba>=0.56',
    'tqdm',
    'requests>=2.0',
    'transformers>=0.30',
    'marsilea',
    #'wandb',
    'openai>=1.0',
    'omicverse-skills>=0.2.0',
    'omicverse-notebook>=0.1.4',
    #'cvxpy>=1.3',
    'zarr<3.0.0',
    'anndata<0.12.0',
]

[project.optional-dependencies]
full = [
  "dynamo-release",
  "squidpy",
  "tangram-sc",
  "pertpy",
  "toytree",
  "arviz",
  "ete3",
  "scvi-tools",
  #"celloracle",
  'torchdr',
  'memento-de',

  #old dependencies
  'pydeseq2>=0.4.1',
  'mofax>=0.3',
  'tomli',
  'lifelines>=0.27',
  'ktplotspy>=0.1',
  'pillow>=9.0',
  'einops>=0.6',
  'tensorboard>=2.6',
  'metatime>=1.3.0',
  'graphtools>=1.5',
  'boltons>=23.0',
  'cytoolz>=0.12',
  'frozendict>=2.3',
  'leidenalg>=0.9',
  'gdown>=4.6',
  'wandb',
  'pygam>=0.8.0',
]

easy=[
  'pydeseq2>=0.4.1',
  'mofax>=0.3',
  'tomli',
  'lifelines>=0.27',
  'ktplotspy>=0.1',
  'pillow>=9.0',
  'einops>=0.6',
  'tensorboard>=2.6',
  'metatime>=1.3.0',
  'graphtools>=1.5',
  'pandas<3.0.0',
  'anndata<0.12.0',
  'numpy>=1.23, <2.0.0',
]

web = [
  "omicclaw",
]

skillseeker = [
  "beautifulsoup4>=4.12",
  "PyGithub>=2.2",
  "PyMuPDF>=1.24",
]

jarvis = [
  "python-telegram-bot>=21.3",
  "discord.py>=2.5",
  "requests>=2.0",
  "pillow>=9.0",
  "nbformat>=5.0",
  "httpx[socks]",
]

tests = [
  "pytest>=7.0",
  "pytest-asyncio>=0.23",
  "python-telegram-bot>=21.3",
  "discord.py>=2.5",
  "requests>=2.0",
  "pillow>=9.0",
  "nbformat>=5.0",
  "httpx[socks]",
  
]

mcp = [
  "mcp>=1.0; python_version >= '3.10'",
]


[project.urls]
Github = 'https://github.com/Starlitnightly/omicverse'

[project.scripts]
ov-skill-seeker = "omicverse.ov_skill_seeker.cli:main"
omicverse = "omicverse.cli:main"
omicverse-mcp = "omicverse.mcp.server:main"

[tool.setuptools.packages.find]
include = ["omicverse*"]
exclude = [
  "tests*",
  "docs*",
  "omicverse_web*",
  "omicverse_guide*",
  "OvIntelligence*",
  "READMEM*",
  "tmp*",
  "Skill_Seekers*",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
  "integration: integration tests that exercise the public fm API",
  "fm_real: real foundation-model inference tests intended for the Taiwan GPU server",
  "fm_gpu: GPU-backed foundation-model tests intended for the Taiwan GPU server",
  "mock: MCP tests using mock registry only (no real packages needed)",
  "core: MCP tests requiring anndata + scanpy (core OmicVerse deps)",
  "scientific: MCP tests requiring anndata + scanpy + scientific stack (scvelo, squidpy)",
  "extended: MCP tests requiring optional heavy packages (SEACells, pertpy, mira)",
  "real_runtime: MCP tests that import real OmicVerse modules (superset of core/scientific/extended)",
]
